[package]
name = "number-diff"
version = "0.1.1"
edition = "2021"
authors = ["Felix Hellborg <felix.hellborg.la@gmail.com>"]
license = "Apache-2.0"
keywords = ["numbers", "maths", "calc", "calculus", "functions"]
repository = "https://github.com/HellFelix/number-diff"
readme = "README.md"
description = "number-based is an attempt of mine to make working with calculus easier."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.183", features = ["derive"], optional = true }

[features]
nightly = []
default = []
serialize = ["dep:serde"]
